<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewLabelMachineState"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/machine_state"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/textViewMachineState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewLabelMachineSpeed"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/machine_speed"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/textViewMachineSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                android:visibility="visible"/>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewLabelCuttingForce"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/cutting_force"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                android:textStyle="normal|bold"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/textViewCuttingForce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                android:visibility="visible"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>